fuck it just look at the moon

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   height:250px;
   border-radius:50%;
   object-fit:cover;
-  transform:scale(1.15) scaleX(-1);
+  transform:scale(1.15);
   clip-path:circle(42%) !important;
   -webkit-clip-path:circle(42%) !important;
   filter: drop-shadow(0 0 15px rgba(255,255,255,.45)) drop-shadow(0 0 35px rgba(200,210,255,.25));
@@ -4660,7 +4660,7 @@
   var swVis  = document.getElementById("sw-vis");
 
   /* =========================================================
-     ICONS (Open-Meteo weathercode)
+     ICONS (Open-Meteo weathercode) - COMPLETE MAPPING
      ========================================================= */
   var METEO_BASE = "https://basmilius.github.io/weather-icons/production/fill/all/";
 
@@ -4670,13 +4670,20 @@
     partlyDay: METEO_BASE + "partly-cloudy-day.svg",
     partlyNight: METEO_BASE + "partly-cloudy-night.svg",
     overcast: METEO_BASE + "overcast.svg",
+    fogDay: METEO_BASE + "fog-day.svg",
+    fogNight: METEO_BASE + "fog-night.svg",
     fog: METEO_BASE + "fog.svg",
     drizzle: METEO_BASE + "drizzle.svg",
     rain: METEO_BASE + "rain.svg",
-    heavyRain: METEO_BASE + "extreme-rain.svg",
+    partlyRainDay: METEO_BASE + "partly-cloudy-day-rain.svg",
+    partlyRainNight: METEO_BASE + "partly-cloudy-night-rain.svg",
+    sleet: METEO_BASE + "sleet.svg",
     snow: METEO_BASE + "snow.svg",
-    heavySnow: METEO_BASE + "extreme-snow.svg",
-    storm: METEO_BASE + "thunderstorms-rain.svg",
+    partlySnowDay: METEO_BASE + "partly-cloudy-day-snow.svg",
+    partlySnowNight: METEO_BASE + "partly-cloudy-night-snow.svg",
+    thunderstormsDay: METEO_BASE + "thunderstorms-day.svg",
+    thunderstormsNight: METEO_BASE + "thunderstorms-night.svg",
+    thunderstormsRain: METEO_BASE + "thunderstorms-rain.svg",
     unknown: METEO_BASE + "not-available.svg"
   };
 
@@ -4722,19 +4729,37 @@
   }
 
   function iconForCode(code){
-    var night = isNightTime();
-    if (code === 0) return {t:"Clear", i: night ? ICONS_URL.clearNight : ICONS_URL.clearDay};
-    if (code === 1 || code === 2) return {t:"Partly cloudy", i: night ? ICONS_URL.partlyNight : ICONS_URL.partlyDay};
-    if (code === 3) return {t:"Overcast", i:ICONS_URL.overcast};
-    if (code === 45 || code === 48) return {t:"Fog", i:ICONS_URL.fog};
-    if (code === 51 || code === 53 || code === 55) return {t:"Drizzle", i:ICONS_URL.drizzle};
-    if (code === 61 || code === 63) return {t:"Rain", i:ICONS_URL.rain};
-    if (code === 65) return {t:"Heavy Rain", i:ICONS_URL.heavyRain};
-    if (code === 71 || code === 73) return {t:"Snow", i:ICONS_URL.snow};
-    if (code === 75) return {t:"Heavy Snow", i:ICONS_URL.heavySnow};
-    if (code === 95 || code === 96 || code === 99) return {t:"Storm", i:ICONS_URL.storm};
-    return {t:"Weather", i:ICONS_URL.unknown};
-  }
+  var night = isNightTime();
+  if (code === 0) return {t:"Clear", i: night ? ICONS_URL.clearNight : ICONS_URL.clearDay};
+  if (code === 1) return {t:"Mainly Clear", i: night ? ICONS_URL.partlyNight : ICONS_URL.partlyDay};
+  if (code === 2) return {t:"Partly Cloudy", i: night ? ICONS_URL.partlyNight : ICONS_URL.partlyDay};
+  if (code === 3) return {t:"Overcast", i: ICONS_URL.overcast};
+  if (code === 45) return {t:"Fog", i: night ? ICONS_URL.fogNight : ICONS_URL.fogDay};
+  if (code === 48) return {t:"Rime Fog", i: ICONS_URL.fog};
+  if (code === 51) return {t:"Light Drizzle", i: ICONS_URL.drizzle};
+  if (code === 53) return {t:"Drizzle", i: ICONS_URL.drizzle};
+  if (code === 55) return {t:"Dense Drizzle", i: ICONS_URL.drizzle};
+  if (code === 56) return {t:"Light Freezing Drizzle", i: ICONS_URL.sleet};
+  if (code === 57) return {t:"Freezing Drizzle", i: ICONS_URL.sleet};
+  if (code === 61) return {t:"Light Rain", i: ICONS_URL.rain};
+  if (code === 63) return {t:"Rain", i: ICONS_URL.rain};
+  if (code === 65) return {t:"Heavy Rain", i: ICONS_URL.rain};
+  if (code === 66) return {t:"Light Freezing Rain", i: ICONS_URL.sleet};
+  if (code === 67) return {t:"Freezing Rain", i: ICONS_URL.sleet};
+  if (code === 71) return {t:"Light Snow", i: ICONS_URL.snow};
+  if (code === 73) return {t:"Snow", i: ICONS_URL.snow};
+  if (code === 75) return {t:"Heavy Snow", i: ICONS_URL.snow};
+  if (code === 77) return {t:"Snow Grains", i: ICONS_URL.sleet};
+  if (code === 80) return {t:"Light Showers", i: night ? ICONS_URL.partlyRainNight : ICONS_URL.partlyRainDay};
+  if (code === 81) return {t:"Showers", i: night ? ICONS_URL.partlyRainNight : ICONS_URL.partlyRainDay};
+  if (code === 82) return {t:"Heavy Showers", i: ICONS_URL.rain};
+  if (code === 85) return {t:"Light Snow Showers", i: night ? ICONS_URL.partlySnowNight : ICONS_URL.partlySnowDay};
+  if (code === 86) return {t:"Snow Showers", i: ICONS_URL.snow};
+  if (code === 95) return {t:"Thunderstorm", i: night ? ICONS_URL.thunderstormsNight : ICONS_URL.thunderstormsDay};
+  if (code === 96) return {t:"T-Storm + Hail", i: ICONS_URL.thunderstormsRain};
+  if (code === 99) return {t:"T-Storm + Heavy Hail", i: ICONS_URL.thunderstormsRain};
+  return {t:"Weather", i: ICONS_URL.unknown};
+}
 
   /* =========================================================
      MOON (approx)
@@ -4744,19 +4769,21 @@
     if (phase < 0.03 || phase > 0.97){ icon="🌑"; name="New Moon"; }
     else if (phase < 0.22)          { icon="🌒"; name="Waxing Crescent"; }
     else if (phase < 0.28)          { icon="🌓"; name="First Quarter"; }
-    else if (phase < 0.47)          { icon="🌔"; name="Waxing Gibbous"; }
-    else if (phase < 0.53)          { icon="🌕"; name="Full Moon"; }
+    else if (phase < 0.45)          { icon="🌔"; name="Waxing Gibbous"; }
+    else if (phase < 0.55)          { icon="🌕"; name="Full Moon"; }
     else if (phase < 0.72)          { icon="🌖"; name="Waning Gibbous"; }
     else if (phase < 0.78)          { icon="🌗"; name="Last Quarter"; }
     else                            { icon="🌘"; name="Waning Crescent"; }
 
-    var illum = Math.round((1 - Math.cos(Math.PI * phase)) / 2 * 100);
+    var illum = Math.round((1 - Math.cos(2 * Math.PI * phase)) / 2 * 100);
+if (illum >= 98) illum = 100;
+if (illum <= 2) illum = 0;
     return { icon:icon, name:name, illum:illum };
   }
 
   function approximateMoonPhase(date){
   var lp = 2551442.8; // lunar period in seconds (29.53059 days)
-  var newMoon = new Date(Date.UTC(2025,0,29,12,36,0)); // Jan 29, 2025 new moon
+  var newMoon = new Date(Date.UTC(2026,0,18,19,52,0)); // Jan 18, 2026 new moon
   var phaseSec = ((date.getTime() - newMoon.getTime())/1000) % lp;
   if (phaseSec < 0) phaseSec += lp;
   return phaseSec / lp;
@@ -6841,15 +6868,16 @@ var dayName = dayDate.toLocaleDateString([], { weekday:"short" }).toUpperCase() 
             // - Frame 4380 = full moon (100%)
             //
             // Use 2025 dataset (a005187) - 2026 dataset has issues
-// Calculate frame based on lunar phase cycle
-var lunarCycleHours = 29.53059 * 24;
-var refNewMoon = new Date(Date.UTC(2026, 0, 29, 12, 36, 0));
-var hoursSinceNewMoon = (now.getTime() - refNewMoon.getTime()) / (1000 * 60 * 60);
-var cyclePosition = ((hoursSinceNewMoon % lunarCycleHours) + lunarCycleHours) % lunarCycleHours;
+// Calculate frame based on phase position
+// In 2025 dataset: frame 946 = new moon, frame 1300 = full moon
+// One lunar cycle = ~709 frames
+var newMoonFrame = 946;
+var fullMoonFrame = 1300;
+var lunarCycleFrames = 709;
 
-// In 2025 dataset, new moon is around frame 696
-var newMoonFrame = 696;
-var frameNum = Math.round(newMoonFrame + cyclePosition);
+// phaseFrac: 0 = new, 0.5 = full, 1 = new again
+var frameOffset = Math.round(phaseFrac * lunarCycleFrames);
+var frameNum = newMoonFrame + frameOffset;
 if (frameNum > 8760) frameNum -= 8760;
 
 var frameStr = String(frameNum).padStart(4, '0');
