Update styles and functionality for GFS widget
GFS COMPLETE WITH POLAR POP

--- a/index.html
+++ b/index.html
@@ -4214,11 +4214,11 @@ body > #dynamic-alert-modal {
                 <div class="widget-title">GFS UPPER AIR <span class="live-tag" id="gfs-live">• LIVE</span></div>
                 <a href="https://mag.ncep.noaa.gov/model-guidance-model-parameter.php?group=Model+Guidance&model=gfs&area=namer" target="_blank" rel="noopener" class="widget-sub" style="text-decoration:none;color:inherit;">NOAA NCEP MAG</a>
               </div>
-              <div class="widget-body" style="background:#0a0a1a;position:relative;overflow:hidden;">
+              <div class="widget-body" style="background:#000;position:relative;overflow:hidden;">
                 <!-- Tab bar -->
                 <div id="gfs-tabs" style="position:absolute;top:10px;left:10px;z-index:10;display:flex;gap:4px;">
                   <button onclick="switchGfsTab('500mb')" id="gfs-tab-500mb" class="gfs-tab-btn gfs-tab-active" style="padding:3px 10px;border-radius:12px;border:1px solid rgba(255,255,255,.25);background:rgba(255,255,255,.15);backdrop-filter:blur(8px);color:#fff;font-size:.6rem;font-weight:700;cursor:pointer;font-family:system-ui,sans-serif;text-transform:uppercase;letter-spacing:.5px;">500mb N.America</button>
-                  <button onclick="switchGfsTab('10mb')" id="gfs-tab-10mb" class="gfs-tab-btn" style="padding:3px 10px;border-radius:12px;border:1px solid rgba(255,255,255,.15);background:rgba(255,255,255,.06);backdrop-filter:blur(8px);color:rgba(255,255,255,.5);font-size:.6rem;font-weight:700;cursor:pointer;font-family:system-ui,sans-serif;text-transform:uppercase;letter-spacing:.5px;">10mb Stratosphere</button>
+                  <button onclick="switchGfsTab('10mb')" id="gfs-tab-10mb" class="gfs-tab-btn" style="padding:3px 10px;border-radius:12px;border:1px solid rgba(255,255,255,.15);background:rgba(255,255,255,.06);backdrop-filter:blur(8px);color:rgba(255,255,255,.5);font-size:.6rem;font-weight:700;cursor:pointer;font-family:system-ui,sans-serif;text-transform:uppercase;letter-spacing:.5px;">500mb Polar View</button>
                 </div>
                 <!-- Forecast hour stepper -->
                 <div id="gfs-fhr-controls" style="position:absolute;bottom:10px;left:50%;transform:translateX(-50%);z-index:10;display:flex;align-items:center;gap:6px;padding:4px 10px;border-radius:16px;background:rgba(0,0,0,.7);backdrop-filter:blur(8px);">
@@ -4230,8 +4230,8 @@ body > #dynamic-alert-modal {
                 <!-- Cycle info -->
                 <div id="gfs-cycle-label" style="position:absolute;top:10px;right:10px;z-index:10;padding:3px 8px;border-radius:8px;background:rgba(0,0,0,.6);backdrop-filter:blur(8px);font-size:.55rem;font-weight:600;color:rgba(255,255,255,.6);font-family:system-ui,sans-serif;">Cycle: --Z</div>
                 <!-- Images -->
-                <img id="gfs-500mb-img" alt="GFS 500mb Vorticity & Heights - North America" style="width:100%;height:100%;object-fit:contain;" />
-                <img id="gfs-10mb-img" alt="CPC 10mb Stratospheric Analysis" style="width:100%;height:100%;object-fit:contain;display:none;" />
+                <img id="gfs-500mb-img" alt="GFS 500mb Vorticity & Heights - North America" style="width:100%;height:100%;object-fit:contain;filter:invert(1) hue-rotate(180deg) brightness(0.9) contrast(1.1);" />
+                <img id="gfs-10mb-img" alt="CPC 10mb Stratospheric Analysis" style="width:100%;height:100%;object-fit:contain;display:none;filter:invert(1) hue-rotate(180deg) brightness(0.9) contrast(1.1);" />
                 <div class="badge">NCEP MAG / CPC</div>
               </div>
             </div>
@@ -7762,7 +7762,11 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
       for(var i=0; i<=384; i+=6) arr.push(i.toString().padStart(3,'0'));
       return arr;
     })(),
-    fhrs10: ['f00','f24','f48','f72','f96','f120','f144','f168','f192','f216','f240']
+    fhrs10: (function(){
+      var arr = [];
+      for(var i=0; i<=384; i+=6) arr.push(i.toString().padStart(3,'0'));
+      return arr;
+    })()
   };
 
   function getGfsCycle(){
@@ -7785,8 +7789,8 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
       var fhr = gfsState.fhrs500[fhrIndex] || '000';
       return 'https://mag.ncep.noaa.gov/data/gfs/' + gfsState.cycle + '/namer/500_vort_ht/gfs_namer_' + fhr + '_500_vort_ht.gif';
     } else {
-      var code = gfsState.fhrs10[fhrIndex] || 'f00';
-      return 'https://www.cpc.ncep.noaa.gov/products/stratosphere/strat_a_f/gif_files/n10hgt_' + code + '.gif';
+      var fhr = gfsState.fhrs10[fhrIndex] || '000';
+      return 'https://mag.ncep.noaa.gov/data/gfs/' + gfsState.cycle + '/polar/500_vort_ht/gfs_polar_' + fhr + '_500_vort_ht.gif';
     }
   }
 
@@ -7799,11 +7803,12 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
       if(d === 0) return 'F' + gfsState.fhrs500[fhrIndex] + ' · +' + h + 'h';
       return 'F' + gfsState.fhrs500[fhrIndex] + ' · Day ' + d + (rem ? '+' + rem + 'h' : '');
     } else {
-      var code = gfsState.fhrs10[fhrIndex];
-      var hrs = parseInt(code.replace('f',''), 10);
-      if(hrs === 0) return 'Analysis';
-      var days = hrs / 24;
-      return '+' + hrs + 'h · Day ' + days;
+      var h = parseInt(gfsState.fhrs10[fhrIndex], 10);
+      if(h === 0) return 'F000 · Analysis';
+      var d = Math.floor(h / 24);
+      var rem = h % 24;
+      if(d === 0) return 'F' + gfsState.fhrs10[fhrIndex] + ' · +' + h + 'h';
+      return 'F' + gfsState.fhrs10[fhrIndex] + ' · Day ' + d + (rem ? '+' + rem + 'h' : '');
     }
   }
 
@@ -7842,6 +7847,8 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
       btn10.style.borderColor = tab === '10mb' ? 'rgba(255,255,255,.25)' : 'rgba(255,255,255,.15)';
     }
     loadGfsFrame();
+    // Auto-start animation on tab switch
+    gfsTogglePlay();
   }
 
   function gfsStepFhr(dir){
@@ -7875,8 +7882,14 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
     var cycleLabel = document.getElementById('gfs-cycle-label');
     if(cycleLabel) cycleLabel.textContent = 'Cycle: ' + gfsState.cycle + 'Z';
     loadGfsFrame();
-    // Auto-start animation
-    setTimeout(function(){ gfsTogglePlay(); }, 1500);
+    // Auto-start animation after first frame loads
+    var gfsFirstImg = document.getElementById('gfs-500mb-img');
+    if(gfsFirstImg){
+      gfsFirstImg.onload = function(){
+        gfsFirstImg.onload = null;
+        gfsTogglePlay();
+      };
+    }
     setInterval(function(){
       var newCycle = getGfsCycle();
       if(newCycle !== gfsState.cycle){
@@ -7887,6 +7900,11 @@ var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x
     }, 30 * 60 * 1000);
   }
 
+
+  // Expose GFS functions to window for onclick handlers
+  window.switchGfsTab = switchGfsTab;
+  window.gfsStepFhr = gfsStepFhr;
+  window.gfsTogglePlay = gfsTogglePlay;
 
   /* =========================================================
      LOCATION SWITCHER
@@ -10045,6 +10063,10 @@ function initNowMicroTabs(){
       };
       img.src = frames[0] + (frames[0].indexOf('?') >= 0 ? '&' : '?') + 'modal=1&cb=' + Date.now();
       img.alt = config.title || 'Enlarged view';
+      // Apply dark invert filter for GFS widget images
+      if (imgId === 'gfs-500mb-img' || imgId === 'gfs-10mb-img') {
+        img.style.filter = 'invert(1) hue-rotate(180deg) brightness(0.9) contrast(1.1)';
+      }
       widgetModalBody.appendChild(img);
       
       if (frames.length > 1 && config.fps) {
@@ -10219,7 +10241,14 @@ function initNowMicroTabs(){
         widget.classList.add("clickable-widget");
         widget.addEventListener("click", function(e){
           if (e.target.closest("button") || e.target.closest("a") || e.target.closest("input")) return;
-          openImageModal(config, imgId);
+          // For GFS widget, use active tab's config
+          var activeImgId = imgId;
+          var activeConfig = config;
+          if (imgId === 'gfs-500mb-img' || imgId === 'gfs-10mb-img') {
+            activeImgId = gfsState.activeTab === '500mb' ? 'gfs-500mb-img' : 'gfs-10mb-img';
+            activeConfig = WIDGET_CONFIG[activeImgId];
+          }
+          openImageModal(activeConfig, activeImgId);
         });
       } else if (img || canvas) {
         widget.classList.add("clickable-widget");
