Adjust text alignment and update moon image logic

--- a/index.html
+++ b/index.html
@@ -447,11 +447,11 @@
   }
 
   .loc-cycler-center{
-    text-align:center;
+    text-align:left;
     width:280px;
     display:flex;
     flex-direction:column;
-    align-items:center;
+    align-items:flex-start;
   }
 
   .loc-dots-row{
@@ -531,6 +531,10 @@
 
   /* Search toggle button - matches GPS button style */
   .loc-search-toggle{
+    position:absolute;
+    right:-22px;
+    top:50%;
+    transform:translateY(-50%);
     width:16px;
     height:16px;
     border-radius:50%;
@@ -542,7 +546,6 @@
     align-items:center;
     justify-content:center;
     padding:0;
-    margin-left:3px;
     opacity:.5;
     transition:all .2s ease;
     flex-shrink:0;
@@ -6232,21 +6235,20 @@ function dayRangeAround(d, days){
       }
     }
 
-    // Update moon image in legend
+    // Update moon image in legend (same logic as large moon)
     var legendMoonEl = document.getElementById("today-tl-legend-moon");
     if (legendMoonEl){
-      var now = new Date();
-      var year = now.getFullYear();
-      var startOfYear = new Date(year, 0, 1);
-      var hourOfYear = Math.floor((now - startOfYear) / (1000 * 60 * 60)) + 1;
-      var yearDiff = year - 2024;
-      var offsetHours = Math.round(yearDiff * 264);
-      var adjustedHour = ((hourOfYear - offsetHours) % 8760);
-      if (adjustedHour <= 0) adjustedHour += 8760;
-      var frameNum = String(Math.max(1, Math.min(8760, adjustedHour))).padStart(4, '0');
-      var moonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005000/a005048/frames/730x730_1x1_30p/moon." + frameNum + ".jpg";
+      var legendPhaseFrac = approximateMoonPhase(new Date());
+      var legendMi = moonInfo(legendPhaseFrac);
+      var legendNewMoonFrame = 946;
+      var legendLunarCycleFrames = 709;
+      var legendFrameOffset = Math.round(legendPhaseFrac * legendLunarCycleFrames);
+      var legendFrame = legendNewMoonFrame + legendFrameOffset;
+      if (legendFrame > 8760) legendFrame -= 8760;
+      var legendFrameStr = String(legendFrame).padStart(4, '0');
+      var legendMoonUrl = "https://svs.gsfc.nasa.gov/vis/a000000/a005100/a005187/frames/730x730_1x1_30p/moon." + legendFrameStr + ".jpg";
       
-      legendMoonEl.style.background = "url('" + moonUrl + "') center/cover";
+      legendMoonEl.style.background = "url('" + legendMoonUrl + "') center/cover";
       legendMoonEl.style.boxShadow = "inset -1px -1px 3px rgba(0,0,0,.15)";
     }
   }
