Fix HTML structure by adding missing closing tag

--- a/index.html
+++ b/index.html
@@ -6913,6 +6913,7 @@ function dayRangeAround(d, days){
 
     // Smoke source from active fires + wind direction
     if(window._activeFires&&window._activeFires.length>0&&pm25>=12){
+      var lat=LOCATION.lat,lon=LOCATION.lon;
       var wDirsAll=['N','NNE','NE','ENE','E','ESE','SE','SSE','S','SSW','SW','WSW','W','WNW','NW','NNW'];
       var windFrom=wDir; // wind blows FROM this direction
       // Find fires that are upwind (in the direction wind comes from)
@@ -11514,4 +11515,3 @@ document.addEventListener('keydown', function(e){ if (e.key === 'Escape') closeA
 </script>
 </body>
 </html>
-
