--- a/index.html
+++ b/index.html
@@ -5158,9 +5158,9 @@ body > #dynamic-alert-modal {
             <!-- Legend -->
             <div class="today-tl-legend" id="today-tl-legend">
               <!-- ROW 1: Golden Hour Card (full width) -->
-              <div class="today-tl-legend-item" style="gap:0;cursor:pointer;padding:0;width:50%;max-width:none;min-width:0;border-radius:14px;overflow:hidden;background:rgba(10,8,18,1);border:1px solid rgba(232,169,84,.12);position:relative;flex-shrink:0;align-self:flex-start;box-sizing:border-box;" id="golden-hour-legend-item" onclick="window.showGoldenInsight(event)">
+              <div class="today-tl-legend-item" style="gap:0;cursor:pointer;padding:0;width:50%;max-width:none;min-width:0;border-radius:14px;overflow:hidden;background:#0a0820;border:none;position:relative;flex-shrink:0;align-self:flex-start;box-sizing:border-box;" id="golden-hour-legend-item" onclick="window.showGoldenInsight(event)">
                 <!-- Dual split-view SVG — NOW vs GOLDEN HOUR forecast -->
-                <div id="golden-hour-sky-scene" style="width:100%;position:relative;overflow:hidden;border-radius:13px;">
+                <div id="golden-hour-sky-scene" style="width:100%;position:relative;overflow:hidden;">
                   <svg width="100%" viewBox="0 0 440 175" preserveAspectRatio="xMidYMid meet" id="golden-sky-svg" style="display:block;">
                     <defs>
                       <linearGradient id="ghNowGrad" x1="0" y1="0" x2="0" y2="1">
@@ -5239,9 +5239,9 @@ body > #dynamic-alert-modal {
                       <!-- Now: sun altitude -->
                       <text id="ghNowSunAlt" x="110" y="26" text-anchor="middle" fill="rgba(255,220,170,.75)" font-size="8" font-weight="800" font-family="system-ui"></text>
                       <!-- Now: layer labels -->
-                      <text id="ghNowLayerH" x="12" y="56" fill="rgba(150,120,220,.6)" font-size="7" font-weight="700" font-family="system-ui"></text>
-                      <text id="ghNowLayerM" x="12" y="67" fill="rgba(220,190,120,.6)" font-size="7" font-weight="700" font-family="system-ui"></text>
-                      <text id="ghNowLayerL" x="12" y="78" fill="rgba(200,200,210,.7)" font-size="7" font-weight="800" font-family="system-ui"></text>
+                      <text id="ghNowLayerH" x="12" y="56" fill="rgba(150,120,220,.6)" font-size="7" font-weight="700" font-family="system-ui" display="none"></text>
+                      <text id="ghNowLayerM" x="12" y="67" fill="rgba(220,190,120,.6)" font-size="7" font-weight="700" font-family="system-ui" display="none"></text>
+                      <text id="ghNowLayerL" x="12" y="78" fill="rgba(200,200,210,.7)" font-size="7" font-weight="800" font-family="system-ui" display="none"></text>
                       <text id="ghNowCond1" x="12" y="139" fill="rgba(255,255,255,.55)" font-size="6.5" font-weight="600" letter-spacing=".3" font-family="system-ui"></text>
                       <!-- Now: countdown -->
                       <text id="ghNowCountLabel" x="12" y="150" fill="rgba(232,169,84,.7)" font-size="6" font-weight="700" letter-spacing=".5" font-family="system-ui"></text>
@@ -5293,9 +5293,9 @@ body > #dynamic-alert-modal {
                       <text id="ghFcLabel" x="232" y="15" fill="rgba(232,169,84,.75)" font-size="9" font-weight="800" letter-spacing="1.2" font-family="system-ui">AT GOLDEN HOUR</text>
                       <text id="ghFcSub" x="232" y="26" fill="rgba(255,255,255,.5)" font-size="6.5" font-family="system-ui"></text>
                       <!-- Forecast: layer labels — pushed down for breathing room -->
-                      <text id="ghFcLayerH" x="232" y="42" fill="rgba(150,120,220,.6)" font-size="7" font-weight="700" font-family="system-ui"></text>
-                      <text id="ghFcLayerM" x="232" y="53" fill="rgba(220,190,120,.6)" font-size="7" font-weight="700" font-family="system-ui"></text>
-                      <text id="ghFcLayerL" x="232" y="64" fill="rgba(200,200,210,.7)" font-size="7" font-weight="800" font-family="system-ui"></text>
+                      <text id="ghFcLayerH" x="232" y="42" fill="rgba(150,120,220,.6)" font-size="7" font-weight="700" font-family="system-ui" display="none"></text>
+                      <text id="ghFcLayerM" x="232" y="53" fill="rgba(220,190,120,.6)" font-size="7" font-weight="700" font-family="system-ui" display="none"></text>
+                      <text id="ghFcLayerL" x="232" y="64" fill="rgba(200,200,210,.7)" font-size="7" font-weight="800" font-family="system-ui" display="none"></text>
                       <text id="ghFcCond1" x="232" y="143" fill="rgba(255,255,255,.6)" font-size="6.5" font-weight="600" letter-spacing=".3" font-family="system-ui"></text>
                       <!-- Forecast: score badge — thin bar -->
                       <rect id="ghFcScoreBg" x="0" y="0" width="0" height="0" fill="none"/>
@@ -5308,15 +5308,23 @@ body > #dynamic-alert-modal {
                     </g>
                   </svg>
                   <!-- Bottom data overlays with real backdrop-filter -->
-                  <div style="position:absolute;bottom:0;left:0;right:0;display:flex;height:26%;">
-                    <div id="ghNowDataBar" style="flex:1;background:var(--paper-soft);backdrop-filter:blur(16px);-webkit-backdrop-filter:blur(16px);box-shadow:0 0 30px rgba(255,255,255,.10), inset 0 0 20px rgba(255,255,255,.18);border-top:1px solid rgba(43,34,244,.10);padding:4px 8px;display:flex;flex-direction:column;justify-content:center;gap:1px;">
-                      <div id="ghNowBarLine1" style="font-size:.42rem;font-weight:700;letter-spacing:.04em;color:rgba(232,169,84,.8);"></div>
-                      <div id="ghNowBarLine2" style="font-size:.72rem;font-weight:800;color:#e8a954;display:flex;align-items:baseline;gap:6px;"></div>
+                  <div style="position:absolute;bottom:0;left:0;right:0;display:flex;flex-direction:column;">
+                    <div style="display:flex;height:auto;flex:1;">
+                      <div id="ghNowDataBar" style="flex:1;background:var(--paper-strong);backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);box-shadow:0 0 30px rgba(255,255,255,.10), inset 0 0 20px rgba(255,255,255,.18);border-top:1px solid rgba(255,255,255,.18);padding:5px 10px;display:flex;flex-direction:column;justify-content:center;gap:0px;">
+                        <div id="ghNowBarLine1" style="font-size:.48rem;font-weight:600;letter-spacing:.04em;color:var(--ink-dim);line-height:1.2;"></div>
+                        <div id="ghNowBarLine1b" style="font-size:.5rem;font-weight:700;letter-spacing:.06em;color:var(--ink);line-height:1.3;"></div>
+                        <div id="ghNowBarLine2" style="font-size:1.2rem;font-weight:800;color:var(--ink);display:flex;align-items:baseline;gap:6px;line-height:1.1;"></div>
+                      </div>
+                      <div id="ghFcDataBar" style="flex:1;background:var(--paper-strong);backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);box-shadow:0 0 30px rgba(255,255,255,.10), inset 0 0 20px rgba(255,255,255,.18);border-top:1px solid rgba(255,255,255,.18);border-left:1px solid rgba(255,255,255,.12);padding:5px 10px;display:flex;flex-direction:column;justify-content:center;gap:1px;">
+                        <div id="ghFcBarLine1" style="font-size:.48rem;font-weight:600;letter-spacing:.04em;color:var(--ink-dim);line-height:1.3;"></div>
+                        <div id="ghFcBarLine2" style="font-size:.62rem;font-weight:700;letter-spacing:.04em;color:var(--ink);line-height:1.2;"></div>
+                        <div id="ghFcBarLine3" style="font-size:.48rem;font-weight:600;color:var(--ink-dim);line-height:1.3;"></div>
+                      </div>
                     </div>
-                    <div id="ghFcDataBar" style="flex:1;background:var(--paper-soft);backdrop-filter:blur(16px);-webkit-backdrop-filter:blur(16px);box-shadow:0 0 30px rgba(255,255,255,.10), inset 0 0 20px rgba(255,255,255,.18);border-top:1px solid rgba(43,34,244,.10);border-left:1px solid rgba(43,34,244,.08);padding:4px 8px;display:flex;flex-direction:column;justify-content:center;gap:1px;">
-                      <div id="ghFcBarLine1" style="font-size:.38rem;font-weight:600;letter-spacing:.03em;color:rgba(0,0,0,.55);"></div>
-                      <div id="ghFcBarLine2" style="font-size:.38rem;font-weight:700;letter-spacing:.03em;color:rgba(0,0,0,.4);"></div>
-                      <div id="ghFcBarLine3" style="font-size:.36rem;font-weight:600;color:rgba(0,0,0,.35);"></div>
+                    <div id="ghDaylightBar" onclick="window.showDaylightInsight(event)" style="cursor:pointer;background:var(--paper);backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);border-top:1px solid rgba(255,255,255,.12);padding:4px 10px;display:flex;align-items:center;justify-content:center;gap:8px;font-size:.44rem;font-weight:600;letter-spacing:.04em;color:var(--ink-dim);">
+                      <span style="color:var(--ink);font-weight:700;" id="ghDaylightVal">--</span>
+                      <span>DAYLIGHT</span>
+                      <span style="font-weight:700;" id="ghDaylightChange">--</span>
                     </div>
                   </div>
                 </div>
@@ -5379,7 +5387,7 @@ body > #dynamic-alert-modal {
                 </div>
                 <!-- Daylight | Cloud legend | Kp scale row -->
                 <div style="display:flex;flex-wrap:nowrap;gap:8px;align-items:center;">
-                  <div class="today-tl-legend-item" style="gap:2px;cursor:pointer;flex-shrink:0;" onclick="window.showDaylightInsight(event)">
+                  <div class="today-tl-legend-item" style="gap:2px;cursor:pointer;flex-shrink:0;display:none;" onclick="window.showDaylightInsight(event)">
                     <div style="font-size:.55rem;font-weight:700;color:#fff;" id="today-tl-daylight">--</div>
                     <div style="font-size:.48rem;font-weight:600;color:#4ecdc4;" id="today-tl-daylight-change">--</div>
                   </div>
@@ -8869,6 +8877,8 @@ function dayRangeAround(d, days){
           nLM.textContent='M '+Math.round(cn.cM)+'%';nLM.setAttribute('fill','rgba(220,190,120,'+(0.25+cn.cM/100*0.35).toFixed(2)+')');
           nLL.textContent='L '+Math.round(cn.cL)+'%';nLL.setAttribute('fill','rgba(200,200,210,'+(0.35+cn.cL/100*0.3).toFixed(2)+')');
           if(cn.cL>70)nLL.setAttribute('font-weight','800');
+          var nbH=document.getElementById('ghNowBarH'),nbM=document.getElementById('ghNowBarM'),nbL=document.getElementById('ghNowBarL');
+          if(nbH){nbH.textContent='H '+Math.round(cn.cH)+'%';nbM.textContent='M '+Math.round(cn.cM)+'%';nbL.textContent='L '+Math.round(cn.cL)+'%';}
         }
         var nC1=document.getElementById('ghNowCond1');
         if(nC1){nC1.textContent='';}
@@ -8944,6 +8954,8 @@ function dayRangeAround(d, days){
             if(mS)fLM.setAttribute('font-weight','800');else fLM.setAttribute('font-weight','700');
             fLL.textContent='L '+Math.round(fc.cL)+'%'+(fc.cL<15?' \u00b7 Clear horizon':'');
             fLL.setAttribute('fill','rgba(200,200,210,'+(0.35+fc.cL/100*.3).toFixed(2)+')');
+            var fbH=document.getElementById('ghFcBarH'),fbM=document.getElementById('ghFcBarM'),fbL=document.getElementById('ghFcBarL');
+            if(fbH){fbH.textContent='H '+Math.round(fc.cH)+'%';fbM.textContent='M '+Math.round(fc.cM)+'%';fbL.textContent='L '+Math.round(fc.cL)+'%';}
           }
           // Conditions
           var fC1=document.getElementById('ghFcCond1');
@@ -8987,27 +8999,28 @@ function dayRangeAround(d, days){
           var fAT=document.getElementById('ghFcSunAlt');if(fAT)fAT.textContent='~4\u00b0';
         }
         // ── Populate HTML overlay bars ──
-        var nbL1=document.getElementById('ghNowBarLine1'), nbL2=document.getElementById('ghNowBarLine2');
+        var nbL1=document.getElementById('ghNowBarLine1'), nbL1b=document.getElementById('ghNowBarLine1b'), nbL2=document.getElementById('ghNowBarLine2');
         var fbL1=document.getElementById('ghFcBarLine1'), fbL2=document.getElementById('ghFcBarLine2'), fbL3=document.getElementById('ghFcBarLine3');
         if(nbL1){
           if(isNightMode){
-            nbL1.textContent='TOMORROW SUNRISE \u00b7 SUNSET';
-            nbL2.innerHTML='<span style="color:#e8a954">'+(tmrwSr?fmt12NoSuffixFromDate(tmrwSr):'--')+'</span><span style="font-size:.4rem;color:rgba(0,0,0,.2);font-weight:400">|</span><span style="color:#e87030">'+(tmrwSs?fmt12NoSuffixFromDate(tmrwSs):'--')+'</span>';
+            nbL1.textContent=cn.n>0?(Math.round(cn.temp)+'\u00b0F  RH '+Math.round(cn.rh)+'%  VIS '+(cn.visMi||'--')+'MI'):'';
+            nbL1b.textContent='TOMORROW';
+            nbL2.innerHTML='<span style="color:var(--ink)">'+(tmrwSr?fmt12NoSuffixFromDate(tmrwSr):'--')+'</span><span style="font-size:.55rem;color:var(--ink-dim);font-weight:300;margin:0 6px">|</span><span style="color:var(--ink)">'+(tmrwSs?fmt12NoSuffixFromDate(tmrwSs):'--')+'</span>';
           } else if(inGH){
             var mr2=Math.max(0,Math.round((ghEnd-now)/60000));
-            nbL1.textContent=(ghIsAm?'AM':'PM')+' GOLDEN HOUR ACTIVE';
-            nbL2.innerHTML=mr2+'m <span style="font-size:.4rem;font-weight:600;color:rgba(232,169,84,.5)">remaining</span>';
+            nbL1.textContent=cn.n>0?(Math.round(cn.temp)+'\u00b0F  RH '+Math.round(cn.rh)+'%'):'';
+            nbL1b.textContent=(ghIsAm?'AM':'PM')+' GOLDEN HOUR ACTIVE';
+            nbL2.innerHTML=mr2+'<span style="font-size:.5rem;font-weight:600;color:var(--ink-dim);margin-left:2px">MIN LEFT</span>';
           } else if(ghStart&&now<ghStart){
             var ms2=ghStart-now,hh2=Math.floor(ms2/3600000),mm2=Math.round((ms2%3600000)/60000);
-            var lbl2=(ghIsAm?'AM':'PM')+' GOLDEN HOUR IN';
-            if(ghIsTomorrow) lbl2='NEXT GOLDEN IN';
-            nbL1.textContent=lbl2;
-            nbL2.innerHTML=(hh2>0?hh2+'H ':'')+ mm2+'M <span style="font-size:.4rem;font-weight:600;color:rgba(232,169,84,.5)">'+fmt12s(ghStart)+'</span>';
-          } else { nbL1.textContent=''; nbL2.innerHTML=''; }
+            nbL1.textContent=cn.n>0?(Math.round(cn.temp)+'\u00b0F  RH '+Math.round(cn.rh)+'%'):'';
+            nbL1b.textContent=(ghIsTomorrow?'NEXT':'')+ ' GOLDEN IN';
+            nbL2.innerHTML=(hh2>0?hh2+'<span style="font-size:.5rem;margin:0 1px">H</span> ':'')+ mm2+'<span style="font-size:.5rem;margin-left:1px">M</span>';
+          } else { nbL1.textContent=''; nbL1b.textContent=''; nbL2.innerHTML=''; }
         }
         if(fbL1){
           if(fc.n>0){
-            fbL1.textContent=Math.round(fc.temp)+'\u00b0F  RH '+Math.round(fc.rh)+'%  VIS '+fc.visMi+'MI'+(hasSmoke?' \u00b7 SMOKE':'');
+            fbL1.textContent='RH '+Math.round(fc.rh)+'%  VIS '+fc.visMi+'MI'+(pm25V>5?'  PM2.5 '+Math.round(pm25V):'')+(hasSmoke?' \u00b7 SMOKE':'');
             fbL2.textContent=ql+' \u00b7 '+qs;
             var R2=[];
             if(fc.pr>0.1)R2.push('Active precipitation');
@@ -9059,6 +9072,13 @@ function dayRangeAround(d, days){
           tlDaylightChange.style.color = "rgba(43,34,244,.60)";
         }
       }
+    }
+    // Populate golden hour daylight bar
+    var ghDV=document.getElementById('ghDaylightVal'), ghDC=document.getElementById('ghDaylightChange');
+    if(ghDV) ghDV.textContent=daylightHours+'H '+daylightMins+'M';
+    if(ghDC && tlDaylightChange){
+      ghDC.textContent=tlDaylightChange.textContent;
+      ghDC.style.color=tlDaylightChange.style.color;
     }
 
     // Sky condition and cloud %
